Правки - первый экран

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,27 +15,21 @@ include template/head.pug
         </div>
         <div class="container-fluid">
           <div class="preface__wrap">
-            <div class="row h-100 align-items-center no-gutters">
-              <div class="col-lg-7">
+            <div class="row no-gutters">
+              <div class="col-sm-10 col-xl-7">
                 <div class="preface__holder">
-                  <div class="row">
-                    <div class="col-sm-6 col-lg-12">
-                      <h1>Оформим визу <br>  в 44 страны мира <span>с гарантией получения <b>от 1 дня</b></span></h1>
-                      <div class="preface__subtitle"><span></span><span>Выдали 12.000 виз <br> за 8 лет работы </span></div>
-                    </div>
-                    <div class="col-sm-6 col-lg-12 align-self-end align-self-lg-start">
-                      <div class="preface__consult">
-                        <p><span>Получите консультацию  визового эксперта бесплатно</span></p>
-                        <a href="#" class="btn btn_adaptive">
-                          <div class="btn__holder">
-                            <div class="btn__text">Получить <br> консультацию</div>
-                            <div class="btn__ico">
-                              +icon('phone')
-                            </div>
-                          </div>
-                        </a>
+                  <h1>Оформим визу <br>  в 44 страны мира <span>с гарантией получения <b>от 1 дня</b></span></h1>
+                  <div class="preface__subtitle"><span></span><span>Выдали 12.000 виз <br> за 8 лет работы </span></div>
+                  <div class="preface__consult">
+                    <p><span>Получите консультацию  визового эксперта бесплатно</span></p>
+                    <a href="#" class="btn">
+                      <div class="btn__holder">
+                        <div class="btn__text">Получить <br> консультацию</div>
+                        <div class="btn__ico">
+                          +icon('phone')
+                        </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -46,7 +40,7 @@ include template/head.pug
       <section class="postface section">
         <div class="container-fluid">
           <div class="row no-gutters postface__holder">
-            <div class="col-sm-6 col-ml-3">
+            <div class="col-sm-6 col-ml-3 mb-4 mb-ml-0">
               <div class="postface__item">
                 <div class="postface__back"></div>
                 <div class="postface__content">
@@ -58,7 +52,7 @@ include template/head.pug
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-ml-3">
+            <div class="col-sm-6 col-ml-3 mb-4 mb-ml-0">
               <div class="postface__item">
                 <div class="postface__back"></div>
                 <div class="postface__content">
@@ -70,7 +64,7 @@ include template/head.pug
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-ml-3">
+            <div class="col-sm-6 col-ml-3 mb-4 mb-ml-0">
               <div class="postface__item">
                 <div class="postface__back"></div>
                 <div class="postface__content">
@@ -82,7 +76,7 @@ include template/head.pug
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-ml-3">
+            <div class="col-sm-6 col-ml-3 mb-4 mb-ml-0">
               <div class="postface__item">
                 <div class="postface__back"></div>
                 <div class="postface__content">
@@ -142,15 +136,15 @@ include template/head.pug
             <div class="which__content">
               <div class="row">
                 <div class="col-sm-6 col-ml-4 which__item">
-                  <div class="visa-type visa-type_schengen">
-                    <div class="visa-type__illustr"></div>
-                    <div class="visa-type__img" style="background-image: url(img/viza-type/1.jpg)"></div>
-                    <div class="visa-type__holder">
-                      <div class="visa-type__content">
-                        <div class="visa-type__name">Шенген</div>
-                        <div class="visa-type__amount">24 страны</div>
-                        <div class="visa-type__price">от 2.000 рублей</div>
-                        <div class="visa-type__btn">
+                  <div class="visa-direction visa-direction_schengen">
+                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__img" style="background-image: url(img/viza-type/1.jpg)"></div>
+                    <div class="visa-direction__holder">
+                      <div class="visa-direction__content">
+                        <div class="visa-direction__name">Шенген</div>
+                        <div class="visa-direction__amount">24 страны</div>
+                        <div class="visa-direction__price">от 2.000 рублей</div>
+                        <div class="visa-direction__btn">
                           <a href="#" class="btn">
                             <span class="btn__holder">Получить визу</span>
                           </a>
@@ -160,15 +154,15 @@ include template/head.pug
                   </div>
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
-                  <div class="visa-type visa-type_asia">
-                    <div class="visa-type__illustr"></div>
-                    <div class="visa-type__img" style="background-image: url(img/viza-type/2.jpg)"></div>
-                    <div class="visa-type__holder">
-                      <div class="visa-type__content">
-                        <div class="visa-type__name">Азия</div>
-                        <div class="visa-type__amount">9 стран</div>
-                        <div class="visa-type__price">от 3.000 рублей</div>
-                        <div class="visa-type__btn">
+                  <div class="visa-direction visa-direction_asia">
+                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__img" style="background-image: url(img/viza-type/2.jpg)"></div>
+                    <div class="visa-direction__holder">
+                      <div class="visa-direction__content">
+                        <div class="visa-direction__name">Азия</div>
+                        <div class="visa-direction__amount">9 стран</div>
+                        <div class="visa-direction__price">от 3.000 рублей</div>
+                        <div class="visa-direction__btn">
                           <a href="#" class="btn">
                             <span class="btn__holder">Получить визу</span>
                           </a>
@@ -178,15 +172,15 @@ include template/head.pug
                   </div>
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
-                  <div class="visa-type visa-type_europe">
-                    <div class="visa-type__illustr"></div>
-                    <div class="visa-type__img" style="background-image: url(img/viza-type/3.jpg)"></div>
-                    <div class="visa-type__holder">
-                      <div class="visa-type__content">
-                        <div class="visa-type__name">Европа</div>
-                        <div class="visa-type__amount">6 стран</div>
-                        <div class="visa-type__price">от 2.000 рублей</div>
-                        <div class="visa-type__btn">
+                  <div class="visa-direction visa-direction_europe">
+                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__img" style="background-image: url(img/viza-type/3.jpg)"></div>
+                    <div class="visa-direction__holder">
+                      <div class="visa-direction__content">
+                        <div class="visa-direction__name">Европа</div>
+                        <div class="visa-direction__amount">6 стран</div>
+                        <div class="visa-direction__price">от 2.000 рублей</div>
+                        <div class="visa-direction__btn">
                           <a href="#" class="btn">
                             <span class="btn__holder">Получить визу</span>
                           </a>
@@ -196,15 +190,15 @@ include template/head.pug
                   </div>
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
-                  <div class="visa-type visa-type_america">
-                    <div class="visa-type__illustr"></div>
-                    <div class="visa-type__img" style="background-image: url(img/viza-type/4.jpg)"></div>
-                    <div class="visa-type__holder">
-                      <div class="visa-type__content">
-                        <div class="visa-type__name">Америка</div>
-                        <div class="visa-type__amount">9 стран</div>
-                        <div class="visa-type__price">от 3.000 рублей</div>
-                        <div class="visa-type__btn">
+                  <div class="visa-direction visa-direction_america">
+                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__img" style="background-image: url(img/viza-type/4.jpg)"></div>
+                    <div class="visa-direction__holder">
+                      <div class="visa-direction__content">
+                        <div class="visa-direction__name">Америка</div>
+                        <div class="visa-direction__amount">9 стран</div>
+                        <div class="visa-direction__price">от 3.000 рублей</div>
+                        <div class="visa-direction__btn">
                           <a href="#" class="btn">
                             <span class="btn__holder">Получить визу</span>
                           </a>
@@ -214,15 +208,15 @@ include template/head.pug
                   </div>
                 </div>
                 <div class="col-sm-6 col-ml-4 which__item">
-                  <div class="visa-type visa-type_oceania">
-                    <div class="visa-type__illustr"></div>
-                    <div class="visa-type__img" style="background-image: url(img/viza-type/5.jpg)"></div>
-                    <div class="visa-type__holder">
-                      <div class="visa-type__content">
-                        <div class="visa-type__name">Океания</div>
-                        <div class="visa-type__amount">9 стран</div>
-                        <div class="visa-type__price">от 3.000 рублей</div>
-                        <div class="visa-type__btn">
+                  <div class="visa-direction visa-direction_oceania">
+                    <div class="visa-direction__illustr"></div>
+                    <div class="visa-direction__img" style="background-image: url(img/viza-type/5.jpg)"></div>
+                    <div class="visa-direction__holder">
+                      <div class="visa-direction__content">
+                        <div class="visa-direction__name">Океания</div>
+                        <div class="visa-direction__amount">9 стран</div>
+                        <div class="visa-direction__price">от 3.000 рублей</div>
+                        <div class="visa-direction__btn">
                           <a href="#" class="btn">
                             <span class="btn__holder">Получить визу</span>
                           </a>
@@ -263,7 +257,7 @@ include template/head.pug
               <h2>Трудности оформления <br>  визы самостоятельно <span>Самостоятельное оформление занимает уйму времени, и не  факт, что после этого вы получите визу – вам могут отказать</span></h2>
             </div>
             <div class="row justify-content-between h-100">
-              <div class="col-sm-6 col-md-4 col-ml-3 order-1">
+              <div class="col-sm-6 col-md-4 col-lg-3 order-1">
                 <ul class="difficulties__list">
                   <li>
                     <div class="difficulties__ico">
@@ -285,7 +279,7 @@ include template/head.pug
                   </li>
                 </ul>
               </div>
-              <div class="col-12 col-md-4 col-ml-6 h-md-100 order-3 order-md-2 align-self-end">
+              <div class="col-12 col-md-4 col-lg-6 h-md-100 order-3 order-md-2 align-self-end">
                 <div class="difficulties__content text-center">
                   <div class="difficulties__img">
                     <img  src="img/difficulties/1.png" alt="">
@@ -301,7 +295,7 @@ include template/head.pug
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-4 col-ml-3 order-2 order-md-3">
+              <div class="col-sm-6 col-md-4 col-lg-3 order-2 order-md-3">
                 <ul class="difficulties__list">
                   <li>
                     <div class="difficulties__ico">
@@ -384,6 +378,13 @@ include template/head.pug
                 <div class="caption__bottom"></div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="section visa-type">
+        <div class="container-fluid">
+          <div class="title visa-type__title">
+            <h2>Оформляем 5 видов виз  от 1 до 3 дней с гарантией выдачи</h2>
           </div>
         </div>
       </section>
