--- a/src/style/part/fonts.scss
+++ b/src/style/part/fonts.scss
@@ -29,32 +29,12 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Segoe UI';
-  src: url('../fonts/SegoeUI.eot');
-  src: local('Segoe UI'), local('SegoeUI'),
-  url('../fonts/SegoeUI.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/SegoeUI.woff') format('woff'),
-  url('../fonts/SegoeUI.ttf') format('truetype');
+  font-family: 'Yeseva One';
+  src: url('../fonts/YesevaOne-Regular.eot');
+  src: local('Yeseva One Regular'), local('YesevaOne-Regular'),
+  url('../fonts/YesevaOne-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/YesevaOne-Regular.woff') format('woff'),
+  url('../fonts/YesevaOne-Regular.ttf') format('truetype');
   font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Segoe UI';
-  src: url('../fonts/SegoeUI-SemiBold.eot');
-  src: local('Segoe UI Semibold'), local('SegoeUI-SemiBold'),
-  url('../fonts/SegoeUI-SemiBold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/SegoeUI-SemiBold.woff') format('woff'),
-  url('../fonts/SegoeUI-SemiBold.ttf') format('truetype');
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Segoe UI';
-  src: url('../fonts/SegoeUI-Bold.eot');
-  src: local('Segoe UI Bold'), local('SegoeUI-Bold'),
-  url('../fonts/SegoeUI-Bold.eot?#iefix') format('embedded-opentype'),
-  url('../fonts/SegoeUI-Bold.woff') format('woff'),
-  url('../fonts/SegoeUI-Bold.ttf') format('truetype');
-  font-weight: bold;
   font-style: normal;
 }
